[gd_scene load_steps=5 format=3 uid="uid://3r20i6bybpb7"]

[ext_resource type="Script" path="res://Objects/pokey.gd" id="1_6op26"]
[ext_resource type="Script" path="res://Objects/physics_component.gd" id="2_6y2cc"]
[ext_resource type="Script" path="res://Objects/enemy_movement.gd" id="3_q7m3w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_akt8i"]
size = Vector2(20, 28)

[node name="Pokey" type="CharacterBody2D"]
collision_layer = 8
script = ExtResource("1_6op26")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_akt8i")

[node name="PhysicsComponent" type="Node" parent="."]
script = ExtResource("2_6y2cc")

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("3_q7m3w")
max_speed = 200.0

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
